Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100560

Crash when closing SwipeDelegate in onCompleted handler

XMLWordPrintable

    • Windows
    • 0238af0bd4 (qt/qtdeclarative/dev) 0238af0bd4 (qt/tqtc-qtdeclarative/dev) abee1cdb44 (qt/qtdeclarative/6.3) abee1cdb44 (qt/tqtc-qtdeclarative/6.3), d25da3e7b (tqtc/lts-5.15)

      This seems to touch freed data.

      To reproduce:

      • run attached application
      • swipe one of the entries to left
      • release when fully visible

      The application crashes (or at least touches freed memory) inside animation jobs.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes