Quick Animations: Fix crash

SwipeDelegate causes the running animation job to be deleted when
calling swipe.close in swipe.completed. Employ the RETURN_IF_DELETED
check in more places to avoid crashes.

Fixes: QTBUG-100560
Task-number: QTBUG-103223
Change-Id: I276eeaa9aed1bdb36449b322a24641fa02c4d5e4
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 0238af0bd48b831d72126f2228d5913eccf67bae)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>